test/error/error.input044.zc
Unknown variable or function:z on line 3
